--- a/src/main/webapp/web-res/css/viewBand.css
+++ b/src/main/webapp/web-res/css/viewBand.css
@@ -172,6 +172,16 @@
 }
 
 .viewBand #showNextVideos {
+     text-align: center;
+     margin-top: 50px;
+ }
+
+.viewBand #showNextGallery {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.viewBand #showNextAudios {
     text-align: center;
     margin-top: 50px;
 }
@@ -182,4 +192,9 @@
     font-weight: bold;
     font-size: 16px;
     color: #e22b20;
+}
+
+.viewBand #photoViewer {
+    min-height: 80vh;
+    min-width: 80vw;
 }
