--- a/src/main/webapp/web-res/css/viewBand.css
+++ b/src/main/webapp/web-res/css/viewBand.css
@@ -42,6 +42,11 @@
     margin-bottom: 20px;
 }
 
+.viewBand .headerRow .edit {
+    font-size: 16px;
+    text-decoration: none;
+}
+
 .viewBand .headerText {
     color: white;
     font-size: 32px;
